--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -30,6 +30,7 @@
     content: '';
   }
   a.active {
+    cursor: default;
     padding-right: 1rem;
     &:after {
       top: calc(50% - 0.75rem);
