--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -1,7 +1,3 @@
-.header {
-  z-index: 1;
-}
-
 .site-title {
   @apply flex
     flex-grow;
@@ -73,7 +69,7 @@
   border-bottom-color: transparent;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.25rem;
   letter-spacing: -0.025em;
   &:hover,
@@ -95,5 +91,8 @@
         color: var(--nav-fg-clr);
       }
     }
+  }
+  @media screen and (min-width: 640px) {
+    font-size: 1rem;
   }
 }
