--- a/front/src/lib/styles/components/theme-toggle.css
+++ b/front/src/lib/styles/components/theme-toggle.css
@@ -1,8 +1,9 @@
 .theme-toggle {
-  transition-property: opacity;
-  padding: 0.75rem 0 0.75rem 0.75rem;
-  @apply dg--transition-effect;
   opacity: 0.7;
+  transition-duration: var(--transition-duration);
+  transition-property: opacity;
+  transition-timing-function: var(--transition-timing-function);
+  padding: 1rem 0 0.75rem 0.75rem;
   &:hover,
   &:focus,
   &:focus-visible,
