--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
-  padding-right: 0;
-  padding-left: 0;
+  padding-right: 0.25rem;
+  padding-left: 0.25rem;
   width: 100%;
   max-width: 64rem /* 1024px */;
   @media screen and (min-width: 333px) {
@@ -31,13 +31,12 @@
   position: relative;
   align-items: center;
   z-index: 1;
-  padding: 1rem;
-  padding-bottom: 0;
+  padding: 1rem 1.5rem 0 1.5rem;
   @media screen and (min-width: 480px) {
     padding-top: 1.25rem;
   }
   @media screen and (min-width: 640px) {
-    padding: 2.5rem 2.25rem 0 2.25rem;
+    padding: 2rem 2.25rem 0 2.25rem;
   }
 }
 body.ready .header {
