--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -22,6 +22,9 @@
       top: 2.5rem;
       right: 0;
       padding: 0 0.5rem;
+      label:not(.bottom) {
+        top: 3px;
+      }
     }
   }
   .category-posts-list,
