--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -1,13 +1,16 @@
 .post {
   display: block;
   position: relative;
-  margin-top: 2.25rem;
+  margin-top: 1.75rem;
   border-radius: 0.77rem;
+  @media screen and (min-width: 333px) {
+    margin-top: 0.75rem;
+  }
   @media screen and (min-width: 640px) {
     margin-top: 1.5rem;
   }
   @media screen and (min-width: 768px) {
-    margin-top: 2.75rem;
+    margin-top: 3.5rem;
     padding: 2.33rem;
   }
   &::before {
