--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -61,6 +61,7 @@
 }
 
 .category-posts-transition-container {
+  box-shadow: var(--shadow-elevation-low);
   background: var(--rim-light-bg), var(--bg-clr);
   @media screen and (min-width: 640px) {
     box-shadow: var(--shadow-elevation-high);
