--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -209,7 +209,6 @@
 
 .post-article {
   display: block;
-  top: -1rem;
   float: none;
   margin-bottom: 0;
   padding-right: 1rem;
@@ -256,6 +255,14 @@
         left: -2.5rem;
         vertical-align: middle;
         font-size: unset;
+      }
+      &:focus,
+      &:focus-visible {
+        opacity: 1;
+        outline-color: var(--highlight-clr);
+        outline-style: dashed;
+        outline-width: 2px;
+        outline-offset: 0.25rem;
       }
     }
     &:hover,
