--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -26,6 +26,7 @@
     transition-property: filter;
     transition-timing-function: var(--transition-timing-function);
     cursor: pointer;
+    box-shadow: var(--shadow-elevation-low);
     border-radius: 0.75rem;
     background-position: center top;
     background-size: cover;
