--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -84,16 +84,18 @@ body.ready .header.scroll-transition {
   padding-left: 1rem;
 }
 
-.post,
-.category {
+.post {
   .aside {
     border: 0;
     border-left-width: 1px;
     border-left-style: solid;
-    padding: 0 1rem;
-    @screen sm {
-      padding: 2rem 1rem 0;
-    }
+  }
+}
+
+.post,
+.category {
+  .aside {
+    padding: 0 1.5rem 0 1rem;
   }
 }
 .privacy,
