--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -79,6 +79,16 @@
         flex-direction: column;
         .post-title {
           margin-bottom: 0.5rem;
+          font-size: 1.5rem;
+          line-height: 1.75rem;
+          @media screen and (min-width: 480px) {
+            font-size: 1.875rem;
+            line-height: 2.25rem;
+          }
+          @media screen and (min-width: 768px) {
+            font-size: 2.25rem;
+            line-height: 2.5rem;
+          }
         }
         .post-date {
           font-size: 1rem;
