--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -45,7 +45,7 @@
   --bg-grain: url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 
   :focus-visible {
-    outline: thin dashed var(--highlight-clr);
+    outline: 2px dashed var(--highlight-clr);
   }
 }
 
@@ -402,8 +402,7 @@
       color: var(--darkgreen);
     }
 
-    .post,
-    .category {
+    .post {
       .aside {
         border-image: linear-gradient(
             to bottom,
@@ -434,7 +433,7 @@
     .category-posts-list {
       .post-item {
         .post-item-summary,
-        h3,
+        .post-title,
         a,
         p {
           color: var(--violet-a75);
@@ -445,7 +444,7 @@
           .post-item-image {
             opacity: 1;
           }
-          a h3 {
+          a .post-title {
             color: var(--jasper);
           }
         }
@@ -819,8 +818,7 @@
       color: var(--green);
     }
 
-    .post,
-    .category {
+    .post {
       .aside {
         border-image: linear-gradient(
             to bottom,
@@ -835,7 +833,7 @@
     .category-posts-list {
       .post-item {
         .post-item-summary,
-        h3,
+        .post-title,
         a,
         p {
           color: var(--fg-clr);
@@ -846,7 +844,7 @@
           .post-item-image {
             opacity: 1;
           }
-          a h3 {
+          a .post-title {
             color: var(--orange);
           }
         }
