--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -47,7 +47,7 @@
       width: 80%;
     }
     .transition-elastic-fly-container {
-      border-radius: 0.77rem;
+      border-radius: 0.75rem;
       overflow: visible;
       ul,
       p.summary {
@@ -60,7 +60,7 @@
           linear-gradient(3deg, #fff 0 0);
         mask-composite: exclude;
         inset: 0;
-        border-radius: 0.77rem;
+        border-radius: 0.75rem;
         padding: 1px 1px 0 0;
         content: '';
       }
@@ -79,6 +79,12 @@
         flex-direction: column;
         .post-title {
           margin-bottom: 0.5rem;
+          font-size: 1.5rem;
+          line-height: 1.75rem;
+          @media screen and (min-width: 480px) {
+            font-size: 1.875rem;
+            line-height: 2.25rem;
+          }
         }
         .post-date {
           font-size: 1rem;
@@ -113,6 +119,7 @@
     padding: 0 0 0 1rem;
     @media screen and (min-width: 640px) {
       display: block;
+      width: 20%;
     }
     @media screen and (min-width: 1024px) {
       padding-right: 1.5rem;
