--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -105,27 +105,34 @@
       }
     }
   }
-  h1.post-title,
   .post-article,
   .aside,
   .aside-toggle {
     position: relative;
-    top: -1rem;
     z-index: 8;
     @screen sm {
-      top: -1.6rem;
     }
     @screen md {
-      top: -6.3rem;
+      top: -4rem;
+    }
+  }
+  h1.post-title,
+  .post-article {
+    @media screen and (min-width: 480px) {
+      top: -1rem;
+    }
+    @media screen and (min-width: 768px) {
+      top: -5rem;
     }
   }
   h1.post-title {
+    left: -1px;
     z-index: 5;
     margin-bottom: 0;
     padding: 0 1rem;
     line-height: 1.2;
     @media screen and (min-width: 480px) {
-      padding: 0 1rem;
+      padding: 0 1.5rem;
     }
   }
   .pubdate {
@@ -176,7 +183,6 @@
     padding-left: 1.75rem;
   }
   @media screen and (min-width: 640px) {
-    padding: 1.75rem 0.75rem;
     font-size: 1.2rem;
   }
 }
@@ -209,25 +215,22 @@
 
 .post-article {
   display: block;
-  top: -1rem;
   float: none;
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   padding-right: 1rem;
   padding-left: 1rem;
   width: 100%;
-  @media screen and (min-width: 333px) {
-    margin-bottom: -0.5rem;
-  }
   @media screen and (min-width: 480px) {
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
   }
   @media screen and (min-width: 640px) {
     float: left;
-    margin-bottom: -6rem;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
+    margin-bottom: 1rem;
     width: 75%;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: -2rem;
   }
   a {
     transition-duration: var(--transition-duration);
@@ -247,15 +250,18 @@
         opacity 500ms ease-in-out,
         color 500ms;
       border: none;
-      padding: 0 0.5rem;
       font-size: 1rem;
       @media screen and (min-width: 480px) {
-        left: -1.5rem;
+        left: -1rem;
       }
       @screen md {
         left: -2.5rem;
         vertical-align: middle;
         font-size: unset;
+      }
+      &:focus,
+      &:focus-visible {
+        opacity: 1;
       }
     }
     &:hover,
