--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -8,7 +8,7 @@
   font-size: 1rem;
   @media screen and (min-width: 640px) {
     margin-top: 1rem;
-    padding-top: 7.77rem;
+    padding: 7.77rem 3.75rem 1rem 3.75rem;
   }
   @media screen and (min-width: 768px) {
     margin-top: 2.75rem;
