feat(front): introduces the all categories page, tags, api, and interaction
adds a redirect for /posts/category/ without slug -> all page

closes #742

--- a/front/src/lib/styles/base/colors-light.css
+++ b/front/src/lib/styles/base/colors-light.css
@@ -11,8 +11,10 @@
   --lemon-50-a30: #fdfdee4c;
   --lemon-50-a75: #fdfdeebf;
   --jasper: #cd533bff;
+  --jasper-a50: #cd533b7f;
   --darkred: #8c1c13ff;
   --sand: #fc9f5bff;
+  --sand-a50: #fc9f5b7f;
   --green: #5aff15ff;
   --darkgreen: #5e6319ff;
   --blue: #4062bbff;
