--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -33,9 +33,6 @@
     @screen md {
       padding-top: 0;
     }
-    li {
-      list-style-type: none;
-    }
   }
   .category-posts-list {
     width: 100%;
@@ -49,9 +46,17 @@
     .transition-elastic-fly-container {
       border-radius: 0.75rem;
       overflow: visible;
-      ul,
+      ul {
+        padding: 1.5rem;
+        @media screen and (min-width: 480px) {
+          padding: 1.5rem;
+        }
+        @media screen and (min-width: 640px) {
+          padding: 2rem;
+        }
+      }
       p.summary {
-        padding: 2rem;
+        padding: 2rem 0;
       }
       &::before {
         position: absolute;
@@ -77,8 +82,9 @@
         display: flex;
         flex-grow: 1;
         flex-direction: column;
+        margin-bottom: 0.5rem;
         .post-title {
-          margin-bottom: 0.5rem;
+          margin-bottom: 0;
           font-size: 1.5rem;
           line-height: 1.75rem;
           @media screen and (min-width: 480px) {
@@ -87,7 +93,10 @@
           }
         }
         .post-date {
-          font-size: 1rem;
+          font-size: 0.875rem;
+          @media screen and (min-width: 480px) {
+            font-size: 1rem;
+          }
         }
       }
       .post-item-image {
@@ -100,10 +109,60 @@
         transition-duration: var(--transition-duration);
         transition-property: opacity;
         transition-timing-function: var(--transition-timing-function);
-        margin-left: 1.75rem;
+        margin-left: 0.75rem;
         border-radius: 100%;
+        width: 20%;
         width: 77px;
         height: 77px;
+      }
+      ul.category-tags {
+        margin: 0;
+        padding: 0;
+      }
+      li.category-tag {
+        display: inline-block;
+        opacity: 0.7;
+        transition-duration: var(--transition-duration);
+        transition-property: opacity, background-color, color;
+        margin: 0 0.33rem 0 0;
+        color: var(--fg-clr);
+        font-size: 0.75rem;
+        font-family: var(--font-ps);
+        @media screen and (min-width: 480px) {
+          margin-right: 0.5rem;
+          box-shadow: var(--shadow-elevation-low);
+          border: thin solid var(--tag-border-clr);
+          border-radius: 1.5rem;
+          background-color: var(--tag-clr);
+          padding: 0.175rem 0.75rem 0.175rem 0.5rem;
+        }
+        &:hover,
+        &:focus,
+        &:focus-visible {
+          opacity: 1;
+        }
+        &:last-of-type {
+          margin-right: 0;
+        }
+        &.active {
+          opacity: 1;
+          a {
+            cursor: default;
+          }
+        }
+        a {
+          align-items: center;
+        }
+        .category-tag-icon {
+          display: inline;
+          vertical-align: middle;
+          margin-right: 3px;
+          height: 100%;
+          color: var(--highlight-clr);
+          @media screen and (min-width: 480px) {
+            margin-right: 0.5rem;
+          }
+        }
       }
       .post-item-summary {
         transition: opacity 0.5s;
