--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -124,12 +124,12 @@
         opacity: 0.7;
         transition-duration: var(--transition-duration);
         transition-property: opacity, background-color, color;
-        margin: 0 0.33rem 0 0;
+        margin: 0 0.5rem 0 0;
         color: var(--fg-clr);
         font-size: 0.75rem;
         font-family: var(--font-ps);
         @media screen and (min-width: 480px) {
-          margin-right: 0.5rem;
+          margin-bottom: 0.33rem;
           box-shadow: var(--shadow-elevation-low);
           border: thin solid var(--tag-border-clr);
           border-radius: 1.5rem;
