--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -440,16 +440,6 @@
         p {
           color: var(--violet-a75);
         }
-        a:hover,
-        a:focus,
-        a:focus-within {
-          .post-item-image {
-            opacity: 1;
-          }
-          .post-title {
-            color: var(--jasper);
-          }
-        }
       }
     }
 
@@ -462,28 +452,36 @@
             color: var(--violet);
           }
         }
-        ~ label {
+        ~ .page-navigation-toggle {
           background-color: var(--lemon-50-a75);
-          color: var(--violet-a50);
           &:hover,
           &:focus,
           &:focus-visible {
             background-color: var(--sun-50);
             color: var(--violet);
           }
-          & + .page-navigation-list {
-            background-color: var(--lemon-50-a75);
-          }
         }
         &:checked {
-          ~ label,
-          label.bottom {
+          ~ .page-navigation-toggle {
             background-color: transparent;
-          }
-          & + .page-navigation-list {
-            background-color: var(--lemon-50-a75);
-            & label.bottom {
+            color: var(--violet-a50);
+            &:hover,
+            &:focus,
+            &:focus-visible {
               background-color: transparent;
+              color: var(--violet);
+            }
+            & + .page-navigation-list {
+              background-color: var(--lemon-50-a75);
+              label.bottom {
+                background-color: transparent;
+                color: var(--violet-a50);
+                &:hover,
+                &:focus,
+                &:focus-visible {
+                  color: var(--violet);
+                }
+              }
             }
           }
         }
@@ -495,7 +493,7 @@
         transition-duration: var(--transition-duration);
         transition-property: color;
         transition-timing-function: var(--transition-timing-function);
-        color: var(--fg-clr);
+        color: var(--violet-a75);
         &:hover,
         &:focus,
         &:focus-visible {
@@ -842,16 +840,6 @@
         p {
           color: var(--fg-clr);
         }
-        a:hover,
-        a:focus,
-        a:focus-within {
-          .post-item-image {
-            opacity: 1;
-          }
-          .post-title {
-            color: var(--orange);
-          }
-        }
       }
     }
 
@@ -880,7 +868,7 @@
             color: var(--celestial);
           }
         }
-        ~ label {
+        ~ .page-navigation-toggle {
           background-color: var(--oxford-blue-a50);
           &:hover,
           &:focus,
@@ -888,18 +876,24 @@
             background-color: var(--grape);
             color: var(--celestial);
           }
-          & + .page-navigation-list {
-            background-color: var(--rich-black-a75);
-          }
-          &:checked {
-            ~ label,
-            label.bottom {
+        }
+        &:checked {
+          ~ .page-navigation-toggle {
+            background-color: transparent;
+            &:hover,
+            &:focus,
+            &:focus-visible {
               background-color: transparent;
+              color: var(--celestial);
             }
             & + .page-navigation-list {
               background-color: var(--rich-black-a75);
-              & label.bottom {
-                background-color: transparent;
+              label.bottom {
+                &:hover,
+                &:focus,
+                &:focus-visible {
+                  color: var(--celestial);
+                }
               }
             }
           }
