feat(front): enhances mini PageNav TOC keyboard navigation focus (#712)

--- a/front/src/lib/styles/base/utilities.css
+++ b/front/src/lib/styles/base/utilities.css
@@ -8,4 +8,7 @@
     transition-duration: var(--transition-duration);
     transition-timing-function: var(--transition-timing-function);
   }
+  .hidden {
+    display: none;
+  }
 }
