--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -102,9 +102,13 @@
       35deg,
       var(--bg-clr) 33%,
       var(--bg-clr) 77%,
-      var(--sun) 150%
+      var(--sun) 180%
     );
-    --rim-light-mask-bg: linear-gradient(3deg, transparent, var(--rim-clr));
+    --rim-light-mask-bg: linear-gradient(
+      3deg,
+      var(--lemon-50) 95%,
+      var(--rim-clr)
+    );
     --category-rim-light-mask-bg: linear-gradient(
       33deg,
       transparent,
@@ -142,7 +146,7 @@
         10deg,
         transparent 0%,
         var(--sunshine) 77%,
-        var(--sun) 123%
+        var(--sun) 153%
       );
       scrollbar-color: var(--violet-a30) transparent;
     }
@@ -222,7 +226,9 @@
     .privacy,
     .post {
       box-shadow: var(--shadow-elevation-low);
-      background: var(--rim-light-bg), var(--bg-clr);
+      background:
+        var(--rim-light-bg) 13%,
+        var(--bg-clr) 59%;
       &::before {
         background: var(--rim-light-mask-bg);
       }
