chore(back): updates to and patches strapi@4.14.4
closes #802

--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -65,7 +65,7 @@
 }
 
 .nav-link {
-  vertical-align: bottom;
+  vertical-align: middle;
   transition: opacity, border;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
