feat(front): styles AnimatedImage component (#847)

--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -78,7 +78,7 @@
         ~ label {
           mix-blend-mode: difference;
           outline-style: dotted;
-          outline-width: thin;
+          outline-width: 2px;
           outline-offset: 1px;
         }
       }
