chore(front): updates frontend dependencies (#850)
Closes: #850

--- a/front/src/lib/styles/components/animated-image.css
+++ b/front/src/lib/styles/components/animated-image.css
@@ -17,8 +17,9 @@
         }
       }
     }
+    [open] summary,
     [open] summary::before {
-      opacity: 0.33;
+      opacity: 0.77;
     }
     figcaption {
       opacity: 1;
