--- a/front/src/lib/styles/base/utilities.css
+++ b/front/src/lib/styles/base/utilities.css
@@ -1,5 +1,6 @@
 :root {
   --transition-duration: 333ms;
+  --transition-duration-md: 500ms;
   --transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
