--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -636,6 +636,7 @@
         }
       }
       .post-link {
+        filter: brightness(100%);
         box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
         background-color: var(--rim-light-bg);
         &::before {
@@ -643,7 +644,7 @@
         }
         .link-bg {
           background-color: rgba(var(--clr-neut-900-rgb), 0);
-          color: rgba(255, 255, 255, 0.85);
+          color: rgba(255, 255, 255, 1);
         }
         &:hover,
         &:focus,
@@ -653,8 +654,7 @@
           box-shadow: inset 0 0 7rem 0.5rem rgba(0, 0, 0, 0.77);
           background-color: rgba(0, 0, 0, 0);
           .link-bg {
-            background-color: rgba(var(--clr-neut-900-rgb), 0.33);
-            color: white;
+            background-color: rgba(var(--clr-neut-900-rgb), 0.7);
           }
         }
       }
