--- a/front/src/lib/styles/components/animated-image.css
+++ b/front/src/lib/styles/components/animated-image.css
@@ -1,6 +1,9 @@
 .animated-image {
+  display: block;
+  width: 100%;
+  height: 100%;
   .animation-player {
-    display: inline-block;
+    display: block;
     position: relative;
   }
   &:hover {
@@ -24,6 +27,13 @@
     figcaption {
       opacity: 1;
     }
+  }
+
+  .animation-player,
+  img {
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
   }
 
   summary,
@@ -133,6 +143,7 @@
     transition-duration: var(--transition-duration);
     transition-property: opacity;
     transition-timing-function: var(--transition-timing-function);
+    margin-top: 0.5rem;
     padding: 0 2rem;
     font-style: italic;
     font-size: 0.75rem;
