feat(front): adds quote Svelte component and styles (#886)
Closes: #886

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -52,7 +52,7 @@
   .title,
   .language {
     position: absolute;
-    padding: 0.75rem;
+    padding: 0.75rem 33px 0.75rem 0.75rem;
     width: 50%;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
       'Liberation Mono', 'Courier New', monospace; /* 1 */
