--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -323,7 +323,7 @@
   blockquote {
     @apply dg--font-lb;
     position: relative;
-    margin: 1.5rem 0 0;
+    margin: 2rem 0 1.5rem 0;
     border-radius: 0.5rem;
     padding: 0.5rem 1.5rem;
     overflow: visible;
@@ -382,6 +382,13 @@
           }
         }
       }
+    }
+    footer {
+      position: relative;
+      z-index: 6;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      text-align: right;
     }
   }
   .footnotes {
